<resources>
    <string name="app_name">ولى الأمر</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="password">الرقم السري</string>
    <string name="login">تسجيل الدخول</string>
    <string name="remember_me">تذكرنى</string>
    <string name="candles_logo">candles logo</string>
    <string name="forgetPassword">هل نسيت الرقم السرى؟</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="errorUserName">اسم المستخدم ليس صحيح!</string>
    <string name="errorPassword">كلمة السر خطأ!</string>
    <string name="errorConnection">خطأ فى الاتصال!</string>
    <string name="success">نجح!</string>
    <string name="errorEmptyFeilds">رجاء ملأ كل الدخلات!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="childernList">Childern List</string>
    <string name="chat">Chat</string>
    <string name="notifications">Notifications</string>
    <string name="childernrv">childernRv</string>
    <string name="notes">الملاحظات</string>
    <string name="behaviourNotes">الملاحظات السلوكية</string>
    <string name="eductionalNotes">الملاحظات التعليمية</string>
    <string name="absence">الغياب</string>
    <string name="fees">المصاريف</string>
    <string name="feesLabel">المصاريف</string>
    <string name="examTypeLabel">الامتحان #</string>
    <string name="expiresDateExam">نهاية الاختبار</string>
    <string name="startDateExam">بداية الاختبار</string>
    <string name="classRoomNameLabel">الحجرة:</string>
    <string name="classNameLabel">الصف:</string>
    <string name="subjectLabel">المادة:</string>
    <string name="quizesrv">quizesRv</string>
    <string name="rightAnswerLabel">عدد الاجابات الصحيحة</string>
    <string name="errorLabel">عدد الاجابات الخطئة</string>
    <string name="successLabel">ناجح</string>
    <string name="degree">الدرجة</string>
    <string name="quizesResultRv">quizes Result Rv</string>
    <string name="absenceLabel">الغياب</string>
    <string name="sendSmsLabel">يوجد رسالة:</string>
    <string name="smsMobileLabel">رقم التليفون:</string>
    <string name="smsTextLabel">محتوى الرسالة:</string>
    <string name="remarksLabel">التعليق:</string>


</resources>