<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layoutDirection="rtl">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".representation.ui.main_activity.MainActivity">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginRight="16dp"
            android:fontFamily="casual"
            android:text="تسجيل الدخول"
            android:textColor="@color/blueBerry_700"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="casual"
            android:text="مرحبا بكم فى مدارس كندلز"
            android:textColor="@color/gray"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="@id/text1"
            app:layout_constraintTop_toBottomOf="@id/text1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameLayout"
            style="@style/TextFeildStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:hint="@string/user_name"
            android:importantForAutofill="no"
            android:layoutDirection="rtl"
            android:textAlignment="viewStart"
            android:textColorHint="@color/gray"
            android:textDirection="rtl"
            app:errorEnabled="true"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:startIconDrawable="@drawable/ic_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/TextFeildStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:textColorHint="@color/gray"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintLeft_toLeftOf="@id/userNameLayout"
            app:layout_constraintRight_toRightOf="@id/userNameLayout"
            app:layout_constraintTop_toBottomOf="@id/userNameLayout"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layoutDirection="rtl"
                android:textAlignment="viewStart"
                android:textDirection="rtl" />

        </com.google.android.material.textfield.TextInputLayout>


        <android.widget.Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="72dp"
            android:background="@drawable/custom_btn"
            android:text="@string/login"
            android:textColor="#FFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBox"
            app:layout_constraintVertical_bias="0.276" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="156dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layoutDirection="rtl"
            android:text="@string/remember_me"
            app:layout_constraintRight_toRightOf="@id/passwordLayout"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetPassword"
            app:layout_constraintBottom_toBottomOf="@+id/checkBox"
            app:layout_constraintLeft_toLeftOf="@id/passwordLayout"
            app:layout_constraintTop_toTopOf="@id/checkBox" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
