<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="quizeResultItem"
            type="com.example.candles_guardian.pojo.QuizResult" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/typeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{quizeResultItem.type_Name}"
                android:textColor="@color/blueBerry_700"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:Text="واجب منزلى" />

            <TextView
                android:id="@+id/subjectLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/subjectLabel"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/typeName" />

            <TextView
                android:id="@+id/subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@{quizeResultItem.subjects_Name}"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/typeName"
                tools:text="اللغة العربية" />

            <TextView
                android:id="@+id/rightAnswerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/rightAnswerLabel"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/subjectLabel"
                app:layout_constraintTop_toBottomOf="@id/subjectLabel" />

            <TextView
                android:id="@+id/rightAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@{String.valueOf(quizeResultItem.right_Count_Answer)}"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/subject"
                app:layout_constraintTop_toBottomOf="@id/subject"
                tools:text="5" />

            <TextView
                android:id="@+id/errorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/errorLabel"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/rightAnswerLabel"
                app:layout_constraintTop_toBottomOf="@id/rightAnswerLabel" />

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@{String.valueOf(quizeResultItem.errors_Count_Question)}"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/rightAnswer"
                app:layout_constraintTop_toBottomOf="@id/rightAnswer"
                tools:text="0" />

            <LinearLayout
                android:id="@+id/labelsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:padding="4dp"
                android:weightSum="2"
                app:layout_constraintStart_toStartOf="@id/error"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/errorLabel"
                app:layout_constraintTop_toBottomOf="@id/errorLabel">

                <TextView
                    android:id="@+id/successLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/successLabel"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/degreeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/degree"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/valueLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:padding="4dp"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/labelsLinearLayout"
                app:layout_constraintTop_toBottomOf="@id/labelsLinearLayout"
                app:layout_constraintEnd_toEndOf="@id/labelsLinearLayout">



                <TextView
                    android:id="@+id/degree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:text="@{String.valueOf(quizeResultItem.student_Degree)}"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:background="@drawable/custom_bg_tv"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/startTimeLabel"
                    app:layout_constraintStart_toStartOf="@id/startTimeLabel"
                    app:layout_constraintTop_toBottomOf="@id/startTimeLabel"
                    tools:text="8" />
                <TextView
                    android:id="@+id/success"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:text="@{String.valueOf(quizeResultItem.success)}"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:background="@drawable/custom_bg_tv"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/startTimeLabel"
                    app:layout_constraintStart_toStartOf="@id/startTimeLabel"
                    app:layout_constraintTop_toBottomOf="@id/startTimeLabel"
                    tools:text="نعم" />
            </LinearLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>