<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="absenceItem"
            type="com.example.candles_guardian.pojo.Absence" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        app:cardBackgroundColor="@color/gray_"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/absenceDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{absenceItem.absenceDate}"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="11-12-1440" />


            <TextView
                android:id="@+id/sendSmsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/sendSmsLabel"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/absenceDate" />

            <TextView
                android:id="@+id/sendSms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@{absenceItem.sendSms}"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/absenceDate"
                tools:text="نعم" />

            <TextView
                android:id="@+id/smsMobileNoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/smsMobileLabel"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/sendSmsLabel"
                app:layout_constraintTop_toBottomOf="@id/sendSmsLabel" />

            <TextView
                android:id="@+id/smsMobileNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@{absenceItem.smsMobileNo}"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/sendSms"
                app:layout_constraintTop_toBottomOf="@id/sendSms"
                tools:text="011250364" />

            <TextView
                android:id="@+id/smsTextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/smsTextLabel"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/smsMobileNoLabel"
                app:layout_constraintTop_toBottomOf="@+id/smsMobileNoLabel" />

            <TextView
                android:id="@+id/smsText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:maxLines="2"
                android:text="@{absenceItem.smsText}"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/excuseLabel"
                app:layout_constraintEnd_toStartOf="@+id/smsTextLabel"
                app:layout_constraintStart_toStartOf="@id/smsMobileNo"
                app:layout_constraintTop_toBottomOf="@id/smsMobileNo"
                tools:text="اسف على تاخير بسبب عطل العربية فى الطريق اسف اسف" />

            <TextView
                android:id="@+id/excuseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="يوجد اعتزار:"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/smsTextLabel"
                app:layout_constraintTop_toBottomOf="@+id/smsText" />

            <TextView
                android:id="@+id/excuse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@{String.valueOf(absenceItem.excuse)}"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/smsText"
                app:layout_constraintTop_toBottomOf="@id/smsText"
                tools:text="400" />

            <TextView
                android:id="@+id/remarksLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:text="@string/remarksLabel"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/excuseLabel"
                app:layout_constraintTop_toBottomOf="@id/excuseLabel" />

            <TextView
                android:id="@+id/remarks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:text="@{absenceItem.remarks}"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/excuse"
                app:layout_constraintTop_toBottomOf="@+id/excuse" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>